# qt_hello_world

./: CMakeLists.txt  README.md  main.cpp
